--- a/ToolLibrary/ToolLibrary.csproj
+++ b/ToolLibrary/ToolLibrary.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <StartupObject>ToolLibrary.Menu</StartupObject>
+    <StartupObject>ToolLibrary.Program</StartupObject>
   </PropertyGroup>
 
 </Project>
